<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="com.bp.project.nextbike.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/nextbike"/>



    <EditText android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="#FF192133"
        android:textColorHint="#A0192133"
        android:fontFamily="sans-serif-light"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/txtPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="#FF192133"
        android:textColorHint="#A0192133"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/btnPrijaviSe"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />



    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLogin"
        android:layout_above="@+id/btnPrijaviSe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prijavi_se"
        android:id="@+id/btnPrijaviSe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/progressBarLogin"
        android:layout_alignEnd="@+id/progressBarLogin"
        android:layout_marginBottom="150dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registriraj_se"
        android:id="@+id/btnRegistracija"
        android:layout_below="@+id/progressBarLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"
        android:layout_alignRight="@+id/btnPrijaviSe"
        android:layout_alignEnd="@+id/btnPrijaviSe" />



</RelativeLayout>
