<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bp.project.nextbike.myProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/name"
        android:id="@+id/lblFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/lblSurname"
        android:width="70dp"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/txtName"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:textColor="#FF192133"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/txtSurname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/surname"
        android:id="@+id/lblSurname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/lblUsername"
        android:width="70dp"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/txtSurname"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:textColor="#FF192133"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/txtUsername"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/username"
        android:id="@+id/lblUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/lblPassword"
        android:width="70dp"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/txtUsername"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:textColor="#FF192133"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/txtPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/password"
        android:id="@+id/lblPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnSaveChanges"
        android:width="70dp"
        android:layout_marginBottom="50dp"/>

    <EditText android:id="@+id/txtPassword"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:textColor="#FF192133"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_above="@+id/btnSaveChanges"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_my_profile_data"
        android:id="@+id/btnSaveChanges"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="128dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
