<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bp.project.nextbike.rentBike_activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/lblChooseRack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_rack"
        android:layout_marginTop="100dp" />

    <Spinner
        android:id="@+id/spinnerRacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblChooseRack"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/txtMaxBikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblChooseRack"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txtUsedBikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMaxBikes"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/lblChooseBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_bike"
        android:layout_marginTop="40dp"
        android:layout_below="@id/txtUsedBikes"
        />

    <Spinner
        android:id="@+id/spinnerBikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblChooseBike"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/txtUsedBikes"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_bike"
        android:id="@+id/btnGetBike"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="128dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nextbike_footer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnGetBike"
        android:layout_alignEnd="@+id/btnGetBike" />

</RelativeLayout>
